force-app/main/default/objects/Consulting_Firm__c/Consulting_Firm__c.object-meta.xml
<CustomObject>
    <label>Consulting Firm</label>
    <pluralLabel>Consulting Firms</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Consulting Firm Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>