force-app/main/default/objects/Consulting_Firm__c/fields/Headquarters__c.field-meta.xml
<CustomField>
    <fullName>Headquarters__c</fullName>
    <label>Headquarters</label>
    <type>Text</type>
    <length>120</length>
</CustomField>