force-app/main/default/objects/Consulting_Firm__c/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <label>Number of Employees</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>